# Dementia-Complex_data_health

./: .gitignore  LICENSE  README.md  pyproject.toml
disease_network/: disease_network.ipynb  network_metrics.ipynb  specific_network.ipynb
fasta/: NC_000021.9[25836962..26214714](-).fa
gene_desease_associations/: C0497327_disease_gda_evidences.tsv  C0497327_disease_gda_summary.tsv  EDA.ipynb
network_medicine/: disease_module.ipynb  disease_separation.ipynb  drug_proximity.ipynb  network_medicine.ipynb
scripts/: localization.py  preprocessing.py  proximity.py  separation.py  utils.py
